# skillup

./: .gitignore  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
bms_skills/: cli.py  github.py  install.py  lock.py  settings.py
docs/: changelog.md  commands.md  development.md  index.md  lock-file.md  quickstart.md  skill-definition.md
docs/assets/: extra.css
skillup/: _tree_ui.py  azdevops.py  cli.py  github.py  http.py  install.py  local.py  lock.py  settings.py
tests/: test_azdevops.py  test_cli.py  test_e2e.py  test_github_auth.py  test_install.py  test_migrate.py  test_remove.py  test_sync.py
