[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillup"
version = "0.5.0"
description = "A minimal CLI to manage agent skills from GitHub releases."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "questionary",
    "requests",
    "truststore",
]

[dependency-groups]
dev = [
    "pyright",
    "pytest",
]

[project.scripts]
skillup = "skillup.cli:app"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["skillup"]
